--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
                         Originally built in p5.js, then redeveloped using Java Processing library and Object-Oriented Programming (OOP) principles. </p>
                     <p class="text-end" id="date"> May 2023 </p>
                 </div>
-				<div class="col-md-2" id="projphoto">
+				<div class="col-md-4" id="projphoto">
                     <a href="https://github.com/cbai12/crossy-pond" target="_blank">
                         <img src="images/crossyPond.png" class="figure-img img-fluid rounded" alt="crossypond">
                     </a> 
@@ -62,7 +62,7 @@
                     </p>
                     <p class="text-end" id="date"> November 2023 </p>
                 </div>
-				<div class="col-md-2" id="projphoto">
+				<div class="col-md-4" id="projphoto">
                     <a href="https://github.com/tiazheng04/Whack-2023" target="_blank">
                         <img src="images/gptChat.png" class="figure-img img-fluid rounded" alt="gptchat">
                     </a> 
@@ -76,7 +76,7 @@
                     </p>
                     <p class="text-end" id="date"> December 2023 </p>
                 </div>
-				<div class="col-md-2" id="projphoto">
+				<div class="col-md-4" id="projphoto">
                     <a href="https://github.com/cbai12/webPortfolio" target="_blank">
                        <!-- Slideshow Starts -->
 						<div id="carouselExampleCaptions" class="carousel slide">
@@ -122,7 +122,7 @@
                         </p>
                     <p class="text-end" id="date"> December 2023 </p>
                 </div>
-				<div class="col-md-2" id="projphoto">
+				<div class="col-md-4" id="projphoto">
                     <iframe src="https://editor.p5js.org/cbai12/full/0ZpTnrkC-"></iframe>
 				</div>
 			</div>
@@ -139,7 +139,7 @@
             <div id="project" class="row marginTop">
 				<div class="col-md-6 projItem"> 
                     <h1 class="display-5 d-flex justify-content-center"> LetterScrapd </h1>
-                    <p id="description"> A Letterboxd web scraper built using Python and Scrapy. </p>
+                    <p id="description"> A Letterboxd web scraper built using Python and BeautifulSoup. It parses data from Letterboxd to give you a list of movies as a JSON file. </p>
                 </div>
 				<div class="col-md-6 projItem">
                     <h1 class="display-5 d-flex justify-content-center"> Logger </h1>
@@ -147,6 +147,22 @@
 					<img src="images/logger.png" class="figure-img img-fluid rounded" id="loggerLogo" alt="logger">
 				</div>
 			</div>
+			<div id="divider" class="row marginTop">
+			</div>
+			<div id="Title" class="row marginTop">
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<h1 class="display-3 d-flex justify-content-center"> Other Projects </h1>
+				<div class="col-md-2"></div>
+			</div>
+			<div id="project" class="row marginTop">
+				<div class="col-md-6 projItem"> 
+                    <h1 class="display-5 d-flex justify-content-center"> Greenspace, Air Quality, and Redlining in Boston </h1>
+                    <p id="description"> An ArcGIS Storymaps discussing my analysis of Boston's greenspace, air quality, and the effects of redlining. Analysis primarily done using Google Earth Engine code editor, QGIS, and Excel. </p>
+                </div>
+				<div class="col-md-6">
+					<iframe src="https://storymaps.arcgis.com/stories/dd2ce46086f94b53a726d54ce2f21a5b" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+				</div>
 			<!--Footer begins-->
 			<footer class="row marginTop">
 				<div class="col-md-8">
