--- a/projects.html
+++ b/projects.html
@@ -163,6 +163,7 @@
 				<div class="col-md-6">
 					<iframe src="https://storymaps.arcgis.com/stories/dd2ce46086f94b53a726d54ce2f21a5b" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
 				</div>
+			</div>
 			<!--Footer begins-->
 			<footer class="row marginTop">
 				<div class="col-md-8">
