added cakes and updated bio

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
 					<h1 class="display-3 d-flex justify-content-center"> Hello! My name is Claire Bai</h1>
-					<p class="text-center"> Welcome to my website! I am currently a junior at NYU studying Computer Science and minoring in Public Health. I grew up in Massachusetts and I am a proud New Englander. I also enjoy reading, writing, baking, and photography!</p>
+					<p class="text-center"> Welcome to my website! I am currently a junior at NYU studying Computer Science and minoring in Public Health. I grew up in Massachusetts and I am a proud New Englander. I've hiked all 48 NH 4k mountains :]. I also enjoy reading, writing, baking, and photography!</p>
+					<p class="text-center"> Fun fact about me: I love trivia and am a huge fan of Jeopardy (have some cool analysis in progress)! I am also passionate about maps and public transportation. </p>
 					<p class="text-center"> P.S. Feel free to check out my <a href="https://www.goodreads.com/user/show/62630095-claire"> Goodreads </a> to see what I'm currently reading </p>
 				</div>
 				<div class="col-md-2"></div>
@@ -67,9 +68,9 @@
 			<div id="courses" class="row marginTop">
 				<div class="col-md-4"> <h1 class="display-6 d-flex justify-content-center"> Coursework </h1> </div>
 				<div class="col-md-8">
-					<p> Computer Science: Basic Algorithms, Computer Systems Organization (C), Data Structures (Java), Intro to Web Design (HTML, CSS, JS), Intro to Computer Science (Java), Intro to Computer Programming (Python), Code! (p5.js), Probability and Statistics (R/RStudio), Discrete Mathematics, Linear Algebra
+					<p> Computer Science: Data Management and Analysis (Python, SQL), Basic Algorithms, Computer Systems Organization (C), Data Structures (Java), Intro to Web Design (HTML, CSS, JS), Intro to Computer Science (Java), Intro to Computer Programming (Python), Code! (p5.js), Probability and Statistics (R/RStudio), Discrete Mathematics, Linear Algebra
 					</p>
-					<p> Public Health: Health and Society, Epidemiology, Geographic Information Systems (ArcGIS, Google Earth Engine) </p>
+					<p> Public Health: Health and Society in a Global Context, Epidemiology, Remote Sensing and Spatial Analysis (ArcGIS, QGIS, Google Earth Engine) </p>
 				</div>
 			</div>
 			<!-- section ends -->
