--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
                     <p class="text-end" id="date"> December 2023 </p>
                 </div>
 				<div class="col-md-4" id="projphoto">
-                    <iframe src="https://editor.p5js.org/cbai12/full/0ZpTnrkC-"></iframe>
+                    <iframe src="https://editor.p5js.org/cbai12/full/0ZpTnrkC-" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 			<!-- section ends -->
@@ -147,8 +147,6 @@
 					<img src="images/logger.png" class="figure-img img-fluid rounded" id="loggerLogo" alt="logger">
 				</div>
 			</div>
-			<div id="divider" class="row marginTop">
-			</div>
 			<div id="Title" class="row marginTop">
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
@@ -161,9 +159,32 @@
                     <p id="description"> An ArcGIS Storymaps discussing my analysis of Boston's greenspace, air quality, and the effects of redlining. Analysis primarily done using Google Earth Engine code editor, QGIS, and Excel. </p>
                 </div>
 				<div class="col-md-6">
-					<iframe src="https://storymaps.arcgis.com/stories/dd2ce46086f94b53a726d54ce2f21a5b" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+					<iframe src="https://storymaps.arcgis.com/stories/dd2ce46086f94b53a726d54ce2f21a5b" width="90%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
 				</div>
 			</div>
+			<div id="Title" class="row marginTop">
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<h1 class="display-3 d-flex justify-content-center"> Cakes! </h1>
+				<div class="col-md-2"></div>
+			</div>
+			<div class="row marginTop" id="cakes">
+				<div class="col-md-4">
+                    <figure class="figure">
+						<img src="images/cake1.JPG" class="figure-img img-fluid" alt="cake1">
+					</figure>
+                </div>
+				<div class="col-md-4">
+					<figure class="figure">
+						<img src="images/cake2.jpg" class="figure-img img-fluid" alt="cake2">
+					</figure>
+				</div>
+				<div class="col-md-4">
+                    <figure class="figure">
+						<img src="images/cake3.JPG" class="figure-img img-fluid" alt="cake3">
+					</figure>
+                </div>
+			</div> 
 			<!--Footer begins-->
 			<footer class="row marginTop">
 				<div class="col-md-8">
@@ -176,7 +197,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="social Div col-md-4 d-flex justify-content-center">
+				<div class="col-md-2"></div>
+				<div class="social Div col-md-2 d-flex justify-content-center">
                     <a href="https://www.linkedin.com/in/baiclaire">
                         <i class="bi bi-linkedin"></i>
                     </a>
@@ -186,7 +208,6 @@
 				</div>
 			</footer>
 		</div>
-
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
